--- a/package.json
+++ b/package.json
@@ -25,5 +25,19 @@
     "nodemon": "^3.1.3",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hsyntes/instamern-server.git"
+  },
+  "keywords": [
+    "instamern-sever",
+    "instamern",
+    "api"
+  ],
+  "bugs": {
+    "url": "https://github.com/hsyntes/instamern-server/issues"
+  },
+  "homepage": "https://github.com/hsyntes/instamern-server"
 }
