--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
-    "jimp": "^0.22.12",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
+    "multer": "^1.4.5-lts.1",
+    "node-addon-api": "^8.0.0",
+    "node-gyp": "^10.1.0",
     "nodemon": "^3.1.3",
+    "sharp": "^0.33.4",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hsyntes/instamern-server.git"
